Fix: issue with profile image not showing on posts and comments spelling error

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -56,7 +56,6 @@ p {
 }
 
 .btn-ci {
-    margin: 2px;
     display: block;
     width: 100%;
     padding: .5rem;
